deploy/nesttemplate-onpremise.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: msprooffeposdetailbscs
    legado: ORACLE
    proyecto: CLARO-GAMING
    subproyecto: VENTAS
    tecnologia: NestJS
  name: msprooffeposdetailbscs
  namespace: nm-clarogaming-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: msprooffeposdetailbscs
    deploymentconfig: msprooffeposdetailbscs
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        cpu: 50m
        memory: 275Mi
      requests:
        cpu: 10m
        memory: 10Mi
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 120
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: msprooffeposdetailbscs
        deploymentconfig: msprooffeposdetailbscs
      name: msprooffeposdetailbscs
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: msprooffeposdetailbscs-config
            - secretRef:
                name: msprooffeposdetailbscs-secret
          image: docker-registry.default.svc:5000/nm-clarogaming-dev/msprooffeposdetailbscs:latest
          imagePullPolicy: Always
          name: msprooffeposdetailbscs
          ports:
            - name: service-port
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 275Mi
            requests:
              cpu: 10m
              memory: 10Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - msprooffeposdetailbscs
        from:
          kind: ImageStreamTag
          name: 'msprooffeposdetailbscs:latest'
          namespace: nm-clarogaming-dev
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: msprooffeposdetailbscs
  name: msprooffeposdetailbscs
  namespace: nm-clarogaming-dev
spec:
  ports:
    - name: service-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: msprooffeposdetailbscs
    deploymentconfig: msprooffeposdetailbscs
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: msprooffeposdetailbscs
  name: msprooffeposdetailbscs
  namespace: nm-clarogaming-dev
spec:
  port:
    targetPort: service-port
  to:
    kind: Service
    name: msprooffeposdetailbscs
    weight: 100
  wildcardPolicy: None
